modify openapi
